k8s/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: youssifmoustafa/docker:front-1.0
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  selector:
    app: frontend
